[package]
name = "mods"
version = "0.1.0"
edition = "2024"
description = "Crypt of the Lost Modding"
license-file = "../../LICENSE"
repository = "https://github.com/Sietse2202/crypts-of-the-lost"
readme = "../../README.md"
keywords = ["network"]
categories = ["games"]

[dependencies]
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
paq = "1.1.1"
toml = "0.9.5"
sysinfo = "0.37.0"
rhai = { version = "1.22.2", features = ["internals"] }
bevy.workspace = true
tracing.workspace = true

[lints]
workspace = true
